# python-fp-lint

./: .gitignore  .talismanrc  CONTRIBUTING.md  README.md  config.example.json  install-lint.sh  pyproject.toml  uninstall-lint.sh
.github/workflows/: ci.yml
commands/: lint.md
docs/superpowers/plans/: 2026-04-14-semgrep-to-ruff-migration.md
docs/superpowers/specs/: 2026-04-14-semgrep-to-ruff-migration-design.md
hooks/: lint-check.sh
hooks/lib/: hash.sh
python_fp_lint/: __init__.py  __main__.py  hook_check.py  lint_gate.py  reassignment_gate.py  result.py  rules_meta.py  semgrep-rules.yml
python_fp_lint/rules/: no-any-type.yml  no-attribute-augmented-mutation.yml  no-deep-nesting.yml  no-list-dict-param-annotation.yml  no-local-augmented-mutation.yml  no-loop-mutation.yml  no-none-default-param.yml  no-optional-none.yml  no-setitem-call.yml  no-subscript-augmented-mutation.yml  no-subscript-del.yml  no-subscript-tuple-mutation.yml  no-unfrozen-dataclass.yml  test-vacuous.yml
tests/: test_ast_grep_rules.py  test_cli.py  test_hook_check.py  test_hook_line_range.py  test_lint_gate.py  test_reassignment_gate.py  test_result.py  test_ruff_integration.py
